# -Harness-OS

./: .gitattributes  .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVALUATION_PLAN.md  README.ja.md  README.ko.md  README.md  README.zh.md  eslint.config.js  migration_log.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md  current-session-state.json  last-session-state.json  observations.jsonl  settings.json
Harness-OS-P0-Fix-Requirements/: 03_SECRET_REDACTION_FIX.md  04_VERIFICATION_DELIVERY_FIX.md
Harness-OS-Third-Round-Fix-Requirements/: 01_GOVERNANCE_SKILL_FILESYSTEM_HOOK_FIX.md  02_SECRET_REDACTOR_FULL_CHAIN_FIX.md  04_CLI_JSON_ALL_COMMANDS_FIX.md  05_RC_TOOLCHAIN_TEST_VERSION_FIX.md
docs/: architecture-lite.md  architecture.md  dogfood_cpis_agent_state.md  dogfood_cpis_agent_state_v1_2_1.md  dogfood_cpis_dashboard.md  dogfood_cpis_dashboard_v1_2_1.md  dogfood_cpis_findings.md  dogfood_cpis_findings_v1_2_1.md  dogfood_cpis_pr_comment.md  dogfood_cpis_pr_comment_v1_2_1.md  dogfood_cpis_readiness.md  dogfood_cpis_readiness_v1_2_1.md  global_consistency_audit.md  governance_recovery_master_report.md  governance_recovery_report_c7210bbdf15c.md  governance_recovery_verdict_matrix.md  hackathon-demo-script.md  harness_loop_installer.md  hermes-loop-lock.md  large_evidence_archive_manifest.md  loop_installer_self_audit.md  mvp_quickstart.md  protocol_standardization_p0_mvp_report.md  public_safe_tag_mapping.md  quickstart.md  (+30 more)
src/: types.ts  (+1 more)
(+366 files in other folders)
